# showmi

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  agent.py  config.py  db.py  hooks.py  install.sh  launch_chrome.sh  main.py  orchestrator.py  planning.py  pyproject.toml  server.py  workflow_runner.py  workflow_utils.py
docs/: architecture.md
extension/: background.js  manifest.json  mic-permission.html  mic-permission.js  recorder.js  sidepanel.css  sidepanel.html  sidepanel.js  theme.css
recordings/: README.md
skills/: README.md
src/showmi/: __init__.py  agent.py  cdp_proxy.py  config.py  hooks.py  main.py  orchestrator.py  planning.py  server.py  workflow_utils.py
