[project]
name = "stockholm"
version = "0.1.0"
description = "Local browser automation agent using browser-use"
requires-python = ">=3.11"
dependencies = [
    "browser-use>=0.2.0",
    "langchain-openai>=0.3.0",
    "langchain-anthropic>=1.0.0",
    "python-dotenv>=1.0.0",
    "fastapi",
    "uvicorn[standard]",
    "websockets",
]

[tool.setuptools]
py-modules = ["main", "agent", "config", "hooks", "db", "server"]

[project.scripts]
stockholm = "main:cli"
