[project]
name = "showmi"
version = "0.1.0"
description = "Local browser automation agent using browser-use"
requires-python = ">=3.11"
dependencies = [
    "browser-use>=0.2.0",
    "langchain-openai>=0.3.0",
    "langchain-anthropic>=1.0.0",
    "python-dotenv>=1.0.0",
    "fastapi",
    "uvicorn[standard]",
    "websockets",
    "pyyaml>=6.0",
    "playwright>=1.40.0",
]

[tool.setuptools]
py-modules = ["main", "agent", "config", "hooks", "db", "server", "workflow_utils", "planning", "orchestrator", "workflow_runner"]

[project.scripts]
showmi = "main:cli"
